--- a/snippets/product-cart.liquid
+++ b/snippets/product-cart.liquid
@@ -15,60 +15,78 @@
 
     <!-- products section -->
     <div class="max-w-6xl flex flex-col my-10 mx-auto">
-        <form action="{{ routes.cart_url }}" method="POST" novalidate>
+        <form action="{{ routes.cart_url }}" method="post" id="cart" novalidate>
             <table class="table-auto divide-y divide-gray-200 my-4 w-full">
                 <thead>
-                    <th class="px-6 py-3 text-left text-sm font-medium text-gray-500">Product</th>
-                    <th class="px-6 py-3 text-left text-sm font-medium text-gray-500">Quantity</th>
-                    <th class="px-6 py-3 text-left text-sm font-medium text-gray-500">Total Price</th>
+                    <th class="px-6 py-3 text-left text-small font-medium text-gray-500">Product</th>
+                    <th class="px-6 py-3 text-left text-small font-medium text-gray-500">Quantity</th>
+                    <th class="px-6 py-3 text-left text-small font-medium text-gray-500">Total Price</th>
                 </thead>
 
                 <tbody>
-                    {% for item in cart.items %}
+
+                    {%  for item in cart.items %}
+                      
                         <tr class="table-row">
+
+                            <!-- product image -->
                             <td class="py-4 px-2 flex flex-col justify-center">
                                 <a href="{{ item.url }}">
                                     {% if item.image %}
-                                        <img src="{{ item | img_url: 'small' }}" alt="{{ item.title | escape }}" class="w-20 h-20 object-cover border" width="" height="" />
-                                    {% else %}
+                                        <img src="{{ item.image | img_url: 'small' }}" alt="{{ item.title | escape }}" class="w-20 h-20 object-cover border" height="" width="" />
+                                    {%  else %}
                                         {{ 'product-1' | placeholder_svg_tag: 'w-20 h-20 object-cover border' }}
                                     {% endif %}
                                 </a>
                             </td>
+                            
                             <td class="py-4 px-2 flex flex-col justify-center">
-                                <a href="{{ item.url }}" class="my-1">{{ item.product.title | truncatewords: 5}}</a>
+                                <!-- product link/ title -->
+                                <a href="{{ item.url }}" class="my-1">{{ item.product.title | truncatewords: 5 }}</a>
+
+                                <!-- product variant name -->
                                 <span class="text-sm text-gray-500 my-1">{{ item.variant.title }}</span>
+
+                                <!-- remove item button -->
                                 <a href="{{ routes.cart_change_url }}?line={{ forloop.index }}&quantity=0" class="text-sm font-medium text-red-500 my-1">remove</a>
                             </td>
+
+                            <!-- quantity -->
                             <td class="py-4 px-2">
-                                <input type="number" name="updates[]" id="updates_{{ forloop.index }}" value="{{ item.quantity }}" min="0" class="w-20 border p-2">
+                                <input type="number" class="w-20 border p-2" name="updates[]" value="{{ item.quantity }}" min="1" id="updates_{{ forloop.index }}" />
                             </td>
+
                             <td class="py-4 px-2">
                                 {{ item.line_price | money }}
                             </td>
                         </tr>
+
                     {% endfor %}
+
                 </tbody>
             </table>
 
             <div class="flex flex-col md:flex-row items-center justify-between">
-                <div class="w-full my-4">
+
+                <!-- message area -->
+                <div class="w-full my-3">
                     <div class="flex flex-col items-start">
-                        <label for="cart_notes my-1">Cart notes</label>
-                        
-                        <textarea name="note" id="cart_note" class="w-full md:max-w-lg resize-none border h-20"></textarea>
+                        <label for="cart_notes" class="my-1">Cart notes</label>
+
+                        <textarea name="note" id="cart_notes" class="w-full md:max-w-lg resize-none border h-20"></textarea>
                     </div>
                 </div>
 
+                <!-- subtotal and checkout/ update -->
                 <div class="w-full my-4 md:w-80">
                     <h3 class="text-xl">Subtotal: {{ cart.total_price | money }}</h3>
 
                     <div class="my-2">
-                        <button type="submit" name="update" class="w-full p-3 border border-gray-600 text-gray-600 font-medium hover:bg-gray-600 hover:text-white">Update</button>
+                        <button type="submit" name="update" class="w-full p-3 border border-gray-600 text-gray-600 font-medium hover:bg-gray-600 hover:text-white transition-all">Update</button>
                     </div>
 
                     <div class="my-2">
-                        <button type="submit" name="checkout" class="w-full p-3 border border-gray-600 font-medium bg-gray-600 text-white">Checkout</button>
+                        <button type="submit" name="checkout" class="w-full p-3 border border-gray-600 text-white font-medium bg-gray-600 hover:text-gray-600 hover:bg-white transition">Checkout</button>
                     </div>
                 </div>
             </div>
